--- a/template.yaml
+++ b/template.yaml
@@ -48,7 +48,6 @@ Resources:
           - X-Amz-Security-Token
         AllowOrigins:
           - !Ref AllowOrigin
-        #AllowCredentials: True
 
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
@@ -63,12 +62,15 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref MessagesTable
+      AutoPublishAlias: live
+      ProvisionedConcurrencyConfig:
+        ProvisionedConcurrentExecutions: 1
       Events:
         HelloWorld:
           Type: HttpApi # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /hello/{message}
-            Method: get
+            Path: /count-message
+            Method: post
             ApiId: !Ref HttpApi
             Auth:
               Authorizer: GeneralAuth
